--- a/design/templates/OpenGame/planet_manage.tpl.html
+++ b/design/templates/OpenGame/planet_manage.tpl.html
@@ -66,7 +66,8 @@
       </td>
     </tr>
 
-    <form action="overview.php?mode=manage" method="POST">
+<form action="overview.php?mode=manage" method="POST">
+  <input type="hidden" name="planet_id" value="{PLANET_ID}">
     <tr>
       <th style="white-space: nowrap;" class="c_l" colspan=4>{L_sys_governor}</th>
     </tr>
