--- a/design/templates/OpenGame/_template.css
+++ b/design/templates/OpenGame/_template.css
@@ -342,6 +342,10 @@ input.ui-button {
   /*margin: 0.6em 0.1em 0.1em 0.4em;*/
 }
 
+.ui-tabs.ui-widget-content {
+  background-color: transparent;
+}
+
 /*.button_pseudo*/
 /*{*/
   /*box-shadow: 0.3em 0.3em rgba(0,0,0,0.750);*/
@@ -592,6 +596,10 @@ input[type=text].coordinate {
 /* NavBar ======================================================================================================== */
 #navbar {
   margin: auto;
+}
+
+#navbar_resources {
+  margin-top: 1em;
 }
 
 /* Page Body ======================================================================================================== */
@@ -848,6 +856,10 @@ input[type=text].coordinate {
 
 
 /* Build page ================================================================================================= */
+#build_sort {
+  margin-bottom: 0.5em;
+}
+
 #unit_require li, #unit_grants li {
   margin: 0;
   padding: 0;
@@ -1938,6 +1950,22 @@ tr[prod_mode] > :not(:first-child) > span:not([style]) { /* Content of empire ce
 
 
 
+/*/!* Title/Black magic ===================================================================================================== *!/*/
+/*body:not(.no_border_image) [table_title]:before {*/
+  /*content: 'CONTENT';*/
+  /*position: absolute;*/
+
+  /*top: 0;*/
+  /*left: 0;*/
+
+  /*/!*display: block;*!/*/
+  /*/!*width: 20em;*!/*/
+  /*/!*height:20em;*!/*/
+
+  /*z-index: 999999;*/
+/*}*/
+
+
 /* Planet List ===================================================================================================== */
 .element_fill_wrap {
   position: absolute;
@@ -2212,6 +2240,54 @@ tr[prod_mode] > :not(:first-child) > span:not([style]) { /* Content of empire ce
 /*div .ui-dialog-content table.ally_template {*/
   /*background-color: transparent;*/
 /*}*/
+
+/* Technology/TechTree page  ===================================================================================================== */
+#tab_tech_tree {
+  font-size: 1em;
+  /*width: 50rem;*/
+  display: none;
+}
+
+#tab_tech_tree .tech_container {
+  display: inline-block;
+  width: 14em;
+  min-height: 11em;
+  margin: 0.5em;
+  padding: 1em;
+
+  vertical-align: top;
+
+  border: 0.1em solid #415680;
+  border-radius: 0.4em;
+}
+
+#tab_tech_tree .tech_image {
+  position: relative;
+
+  width: 11em;
+  height:11em;
+}
+#tab_tech_tree .tech_image img {
+  position: absolute;
+  top: 0;
+  left:0;
+
+  width: 100%;
+  height: 100%;
+}
+#tab_tech_tree .tech_image > span {
+  position: absolute;
+  top: 0;
+  left:0;
+
+  width: 100%;
+  /*height: 4em;*/
+}
+
+#tab_tech_tree .tech_require {
+  text-align: left;
+  font-size: 0.9em;
+}
 
 /* Note/Bookmark page ===================================================================================================== */
 .note_coordinates {
