--- a/skins/EpicBlue/skin.css
+++ b/skins/EpicBlue/skin.css
@@ -184,7 +184,6 @@ div.ui-slider-range {
   background: #f6a828; !important;
 }
 
-
 /* Unit preview box on build pages */
 .unit_preview {
   border-color: #344566;
@@ -196,7 +195,8 @@ div.ui-slider-range {
 
 body:not(.no_border_image) table:not(.markup):not(.noborder):not(.no_border_image):not(.border_image_small),
 body:not(.no_border_image) div#tab_container,
-body:not(.no_border_image) div.market_services
+body:not(.no_border_image) div.market_services,
+body:not(.no_border_image) .border_image_large
 {
   border: solid transparent;
   border-radius: 0.5em;
@@ -223,19 +223,6 @@ body:not(.no_border_image) .border_image_small, body:not(.no_border_image) .ui-d
   border-image:         url("images/border_small.png") 11 11 11 11 round round;
 }
 
-#navbar_resources {
-  margin-top: 1em;
-}
-
-#build_sort {
-  margin-bottom: 0.5em;
-}
-
-div#tab_container {
-  background-color: transparent;
-  background-image: none;
-}
-
 div#tab_container > div {
   background-color: #222D42;
 }
@@ -260,8 +247,3 @@ div.market_services {
 .ui-tabs-active.ui-state-active {
   background-color: #222D42; /* #344566 */
 }
-/*
-.ui-tabs .ui-tabs-nav li {
-  border-bottom-width: 0.1em;
-}
-*/
