FLEET-misc-40a18.15: Changed border on fleet-page-1 to thin ones

--- a/design/templates/OpenGame/fleet1.tpl.html
+++ b/design/templates/OpenGame/fleet1.tpl.html
@@ -95,7 +95,7 @@
   <table>
     <tr>
       <td valign="top">
-        <table>
+        <table class="border_image_small">
         <tr><td colspan=2 class=c>{L_fl_myplanets}</td></tr>
           <!-- BEGIN colonies -->
             <tr>
@@ -117,7 +117,7 @@
       </td>
 
       <td valign="top">
-        <table>
+        <table class="border_image_small">
           <tr><td class=c><a href="notes.php" class="link">{L_fl_shortcut}</a></td></tr>
           <!-- BEGIN shortcut -->
             <tr>
@@ -141,7 +141,7 @@
       </td>
 
       <td valign="top">
-        <table>
+        <table class="border_image_small">
         <tr><td class=c>{L_fl_grattack}</td></tr>
           <!-- BEGIN acss -->
             <tr>
