--- a/design/templates/OpenGame/artifacts.tpl.html
+++ b/design/templates/OpenGame/artifacts.tpl.html
@@ -1,6 +1,6 @@
-<h1>{PAGE_HEADER}</h1>
+<!--<h1>{PAGE_HEADER}</h1>-->
 
-<table width="530">
+<table <!-- IF PAGE_HEADER -->table_title="{PAGE_HEADER}"<!-- ENDIF --> style="width: 530px">
   <tr>
     <td colspan="2" class="c">{L_sys_dark_matter}</td>
   </tr>
@@ -44,5 +44,4 @@
     </tr>
   <!-- END artifact -->
 </table>
-
 <!-- INCLUDE page_hint -->
