--- a/design/templates/OpenGame/techtree_mobile.tpl.html
+++ b/design/templates/OpenGame/techtree_mobile.tpl.html
@@ -1,5 +1,5 @@
 <!-- DEFINE $PREV_GROUP_CLOSING_TAG = '' -->
-<div id="tab_tech_tree" class="border_image_large" table_title="TEST">
+<div id="tab_tech_tree" class="border_image_large" table_title="{PAGE_HEADER}">
   <ul>
     <!-- BEGIN techtree -->
     <!-- IF ! techtree.ID -->
