EVENT-feat-40a19.6: Halloween-2015 event support

--- a/design/templates/OpenGame/topnav.tpl.html
+++ b/design/templates/OpenGame/topnav.tpl.html
@@ -5,6 +5,15 @@
 <!-- ENDIF -->
 
 <table cellpadding="3" cellspacing="0" class="header c_c" id="navbar"><tbody>
+  <!-- IF HALLOWEEN -->
+  <tr>
+    <td class="c_r markup">
+      <button onclick="sn_redirect('{D_SN_ROOT_VIRTUAL}index.php?page=halloween');" style="margin: 5px 0;">
+        А сколько вкусняшек уже собрали?
+      </button>
+    </td>
+  </tr>
+  <!-- ENDIF -->
   <!-- IF GAME_BLITZ_REGISTER && ! GAME_BLITZ -->
   <tr>
     <td class="c_r markup">
